--- a/resources/css/projects.css
+++ b/resources/css/projects.css
@@ -1,12 +1,18 @@
 body {
-	font-family: Verdana;
+	font-family: 'Lato', sans-serif;
 	font-size: 20px;
 	color: #FFCB9A;
 	background-color: #2C3531;
 }
 #Chain-Reaction{
-	display: inline;
+	clear: both;
+	padding: 20px;
 }
+#Chain-Reaction a:visited{
+	text-decoration: none;
+	color: #FFCB9A;
+}
+
 #Chain-Reaction img{
 	float: left;
 }
@@ -24,7 +30,9 @@ body {
 #Golf-League p{
 	text-align:center;
 }
-
+#Golf-League a:visited{
+	color: #FFCB9A;
+}
 header{
 	clear: both;
 	background-color: #D1E8E2;
