--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -32,3 +32,9 @@ ul#horizontal-list {
 ul#horizontal-list li{
 	display: inline;
 }
+article img{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+}
